--- a/KalendarzKarierySolution/KalendarzKariery/Content/Site.css
+++ b/KalendarzKarierySolution/KalendarzKariery/Content/Site.css
@@ -85,19 +85,188 @@ header, footer, nav, section, div {
 	text-align: center;
 }
 
+.dz-row {
+	position: relative;
+	top: 20px;
+	margin-bottom: 40px;
+}
+
 #lobbyNavContainer {
-	margin-top: 200px;
+	margin-top: 150px;
 	text-align: center;
 	font-size: 1.2em;
-	
+	padding: 20px;
 }
 
 	#lobbyNavContainer a {
-		padding: 10px;
+		margin: 10px;
 		color: white;
-		text-decoration:none;
-		border-bottom:2px solid blue;
+		text-decoration: none;
 	}
+
+.selected-nav-link {
+	text-shadow: 0px 1px 1px #B3AC95;
+	border-bottom: 2px solid #F6FFF4;
+}
+
+#lobbyTableOfEventsSection {
+	background: rgb(250, 250, 240);
+}
+
+.events-menu-container {
+	text-align: center;
+	padding: 40px;
+}
+
+.menu-item-container {
+	display: inline-block;
+	position: relative;
+	margin-bottom: 20px;
+	margin-top: 20px;
+	background: #E8E8D4;
+	border: 2px solid rgb(228, 224, 209);
+}
+
+.menu-item {
+	height: 0px;
+	color: rgb(133, 123, 100);
+	font-size: 1em;
+	margin-bottom: 20px;
+	width: 100px;
+	text-align: center;
+}
+
+.border-item {
+	border-bottom: 8px solid;
+}
+
+/*border-colors*/
+.inne-border-tab {
+	color: rgb(255, 204, 204);
+}
+
+.lekcje-border-tab {
+	color: rgb(255, 232, 189);
+}
+
+.wydarzenia-border-tab {
+	color: rgb(255, 255, 196);
+}
+
+.spotkania-border-tab {
+	color: rgb(194, 255, 212);
+}
+
+.zajecia-border-tab {
+	color: rgb(193, 241, 255);
+}
+
+.szkolenia-border-tab {
+	color: rgb(185, 205, 255);
+}
+
+.kursy-border-tab {
+	color: rgb(200, 200, 200);
+}
+
+/*end border-colors*/
+
+.menu-item-number-upcoming {
+	font-size: 3em;
+	color: rgb(173, 165, 137);
+}
+
+.display-events-overview-container {
+	background: rgb(232, 232, 212);
+	border: 2px solid white;
+}
+
+.display-events-overview-header {
+	text-align: left;
+	padding: 5px;
+	padding-left: 20px;
+	background: #DBDBCA;
+	font-size: 1.4em;
+	position: relative;
+}
+
+.display-events-header-menu-title {
+	border-top: 4px solid #A7A292;
+	padding: 10px;
+}
+
+	.display-events-header-menu-title.selected {
+		/*color: rgb(255, 251, 239);*/
+		color: rgb(121, 121, 106);
+		border-top: 4px solid #9A9A84;
+		/*border-top: 4px solid #D7D0B8;*/
+	}
+
+.display-events-overview-body {
+	padding-bottom: 40px;
+	padding-top: 20px;
+}
+
+.display-events-overview-container .legend-oldorupcoming {
+	color: whitesmoke;
+	padding: 4px 0;
+	font-size: 2em;
+	text-align: center;
+	margin-left: 100px;
+	margin-top: 3px;
+	position: relative;
+	background: rgb(165, 165, 149);
+}
+
+.oldorupcoming-event-count {
+	padding-right: 10px;
+	position: absolute;
+	right: 0;
+}
+
+.oldorupcoming-expand-text {
+	font-size: 14px;
+	position: relative;
+	right: 100px;
+}
+
+.display-events-overview-item {
+	border-left: 2px solid #D8D8C5;
+	border-right: 2px solid #D8D8C5;
+	border-bottom: 2px solid #F3F3E4;
+	background: #DBDBCA;
+	overflow: hidden;
+}
+
+.oldorupcoming-text-container {
+	position: absolute;
+	left: 0;
+}
+
+.oldorupcoming-sign {
+	padding: 20px;
+}
+
+.event-block-container {
+	background: #C3C3AE;
+	margin: 2px;
+	width: 30%;
+	height: auto;
+	padding: 10px;
+}
+
+#lobbyEventsMasonryContainer {
+	background: gray;
+	height: 100%;
+	width: 100%;
+}
+
+
+
+
+
+
+
 
 
 
@@ -112,4 +281,85 @@ header, footer, nav, section, div {
 
 #registerPageContainer {
 	display: none;
+}
+
+
+
+
+
+
+.inline-block {
+	display: inline-block;
+	vertical-align: top;
+}
+
+.width-49per {
+	width: 49%;
+}
+
+.event-block-description {
+}
+
+.display-events-overview-item-list {
+	padding-left: 100px;
+	padding-right: 6px;
+}
+
+.section-title {
+	background: #E8E8D4;
+	font-size: 2em;
+	text-align: center;
+	color: #5D5D59;
+}
+
+.hover-cursor-pointer:hover {
+	cursor: pointer;
+}
+
+.close-btn-x {
+	color: rgb(140, 133, 133);
+	font-size: 1.4em;
+	position: absolute;
+	top: -3px;
+	right: 12px;
+}
+
+.overview-item-inner-wrapper {
+	font-size: 1.4em;
+	padding: 4px;
+	color: #313131;
+}
+
+.list-item-title {
+	font-size: 1.4em;
+}
+
+.list-item-star {
+	display: inline-block;
+	vertical-align: bottom;
+	width: 40px;
+}
+
+.list-item-other {
+	font-size: 1.2em;
+	margin-right: 20px;
+}
+
+.list-item-date {
+	margin-bottom: 10px;
+	padding-left: 40px;
+}
+
+.event-kind-tag {
+	width: 200px;
+	background: #84847D;
+	text-align: center;
+}
+
+.event-block-info-details {
+	font-size: 1.4em;
+}
+
+.event-block-menu {
+	float: right;
 }
