--- a/KalendarzKarierySolution/KalendarzKariery/Views/Home/LobbyPage/_Lobby.cshtml
+++ b/KalendarzKarierySolution/KalendarzKariery/Views/Home/LobbyPage/_Lobby.cshtml
@@ -4,33 +4,28 @@
 			<img src="~/Images/Logo/kkLogo.png" alt="logo" />
 		</div>
 
-		@if (Request.IsAuthenticated)
-  {
-			@Html.Partial( "_LobbyLoggedInBar" )			 
-  }
-  else
-  {
-			@Html.Partial( "_LobbyNotLoggedInBar" )			 
-  }
+		@Html.Partial( "_LobbyLoginBar" )
 	</header>
 
 	<section id="lobbyQuoteAndNavSection">
 		<p class="lobby-quote">Twój osobisty kalendarz stworzony na miare Twoich potrzeb.</p>
 		<nav id="lobbyNavContainer">
-			<a href="#0">Strona Główna</a>
+			<a href="#0" class="selected-nav-link">Strona Główna</a>
 			<a href="#1">Kalendarz</a>
 			<a href="#2">Dziennik</a>
 		</nav>
 	</section>
 </section>
-<div class="dz-row" style="display: none;">
-	<div id="addPrivateEventBtn" class="hover-cursor-pointer" data-bind="click: function ( data, e ) { $root.showAddPrivateEventLobbyPopupOnClick( $element, data, e ) }">Dodaj do swojego kalendarza +</div>
-	<header class="title-header">Tablica wydarzeń</header>
-
+<section class="dz-row" style="height:200px;">
+	<div id="addPrivateEventBtn" class="hover-cursor-pointer" style="display:none;" data-bind="click: function ( data, e ) { $root.showAddPrivateEventLobbyPopupOnClick( $element, data, e ) }">Dodaj do swojego kalendarza +</div>
+</section>
+<section class="dz-row">	
+	<header class="section-title">Nadchodzące wydarzenia</header>
 	<section id="lobbyTableOfEventsSection">
+
 		@Html.Partial( "_LobbyEventsMenuItems" )
 
-		<div id="lobbyPageAllEventsListContainer" class="display-events-overview-container" data-bind="visible: $root.lobbyPagePublicEventListMenu.isOpen()">
+		<div id="lobbyDisplayEventsOverviewContainer" class="display-events-overview-container" data-bind="visible: $root.lobbyPagePublicEventListMenu.isOpen()">
 			<header class="display-events-overview-header">
 				<span class="display-events-header-menu-title selected hover-cursor-pointer">Publiczne wydarzenia</span>
 				<div class="close-btn-x hover-cursor-pointer" data-bind="click: $root.closeAllSelectedEventsListContainerOnClick">x</div>
@@ -38,18 +33,25 @@
 			@Html.Partial( "_LobbyPublicEventList" )
 		</div>
 	</section>
-</div>
-<div class="dz-row" style="display: none;">
-	<section id="lobbyEventsDisplaySection">
-		@Html.Partial( "_LobbyEventsDisplay" )
+</section>
+<section class="dz-row">
+	<header class="section-title">Tablica wydarzeń</header>
+	<section id="lobbyEventsMasonryContainer">
+		<div class="grid js-masonry" data-bind="masonry: { data: publicEvents, masonryOptions: { itemClass: 'event-block-container', gutter: 10 } }">
+			<div class="event-block-container" data-bind="attr: { 'data-eventid': id }">
+				<div class="event-block">
+					@Html.Partial( "_LobbyEventDetails" )
+				</div>
+			</div>
+		</div>
 	</section>
-</div>
-<div class="dz-row" style="display: none;">
+</section>
+@*<div class="dz-row" style="display: none;">
 	@Html.Partial( "_LobbyNews" )
 	<footer class="lobby-footer">
-		<span>Kalendarz Kariery 2015, wszelkie prawa zastrzezone</span>
+		<span>Kalendarz Kariery 2015, wszelkie prawa zastrzeżone</span>
 	</footer>
-</div>
+</div>*@
 
 
 
