--- a/KalendarzKarierySolution/KalendarzKariery/Views/Home/LobbyPage/_Lobby.cshtml
+++ b/KalendarzKarierySolution/KalendarzKariery/Views/Home/LobbyPage/_Lobby.cshtml
@@ -45,13 +45,11 @@
 			</div>
 		</div>
 	</section>
-</section>
-@*<div class="dz-row" style="display: none;">
-	@Html.Partial( "_LobbyNews" )
+	@*	@Html.Partial( "_LobbyNews" )*@
 	<footer class="lobby-footer">
 		<span>Kalendarz Kariery 2015, wszelkie prawa zastrzeżone</span>
 	</footer>
-</div>*@
+</section>
 
 
 
