--- a/KalendarzKarierySolution/KalendarzKariery/Content/Site.css
+++ b/KalendarzKarierySolution/KalendarzKariery/Content/Site.css
@@ -75,12 +75,14 @@ header, footer, nav, section, div {
 }
 
 #lobbyQuoteAndNavSection {
-	background: #9E9A89;
-	padding: 20px;
+	/*background: #9E9A89;*/
+	background: gray;
+	padding: 10px;
+	padding-bottom: 0;
 }
 
 .lobby-quote {
-	color: #3E3B3B;
+	color: black;
 	font-size: 2em;
 	text-align: center;
 }
@@ -96,6 +98,7 @@ header, footer, nav, section, div {
 	text-align: center;
 	font-size: 1.2em;
 	padding: 20px;
+	border-top: 1px solid #949494;
 }
 
 	#lobbyNavContainer a {
@@ -213,9 +216,10 @@ header, footer, nav, section, div {
 	font-size: 2em;
 	text-align: center;
 	margin-left: 100px;
-	margin-top: 3px;
+	margin-top: 1px;
 	position: relative;
 	background: rgb(165, 165, 149);
+	border-bottom: 2px solid #E8E8D4;
 }
 
 .oldorupcoming-event-count {
@@ -262,7 +266,12 @@ header, footer, nav, section, div {
 }
 
 
+/*Details page*/
 
+#details .dz-column-inner-wrapper {
+	width: 80%;
+	margin:0 auto;
+}
 
 
 
@@ -326,7 +335,6 @@ header, footer, nav, section, div {
 
 .overview-item-inner-wrapper {
 	font-size: 1.4em;
-	padding: 4px;
 	color: #313131;
 }
 
@@ -351,8 +359,8 @@ header, footer, nav, section, div {
 }
 
 .event-kind-tag {
-	width: 200px;
-	background: #84847D;
+	width: 180px;
+	background: #90907F;
 	text-align: center;
 }
 
