--- a/KalendarzKarierySolution/KalendarzKariery/Views/Home/DetailsPage/_Details.cshtml
+++ b/KalendarzKarierySolution/KalendarzKariery/Views/Home/DetailsPage/_Details.cshtml
@@ -1,12 +1,10 @@
 ﻿@model KalendarzKarieryData.Models.ViewModels.RegisterViewModel
-<div class="dz-row">
-	<div style="height: 20px; background: #EDE9D9;"></div>
-	<div class="title-header">
+<section class="dz-row">
+	<header class="section-title">
 		<span>Dziennik</span>
-	</div>
+	</header>
 	<section id="detailsPanel">
-		<div style="width: 90%;">
-			<div id="todayDateAndTimeContainer" data-bind="click: $root.showTodayInDetailsPageCalendarDetailsTable" class="hover-cursor-pointer">
+			@*<div id="todayDateAndTimeContainer" data-bind="click: $root.showTodayInDetailsPageCalendarDetailsTable" class="hover-cursor-pointer">
 				<div style="position: absolute; z-index: -1;">
 					<div id="todayDateDay" data-bind="text: $root.todayDate.day"></div>
 					<div id="todayDateDayName" data-bind="text: $root.todayDate.getDayName()"></div>
@@ -17,9 +15,9 @@
 				<div id="clockCanvas">
 					<div id="digitalClock"></div>
 				</div>
-			</div>
+			</div>*@
 
-			<div style="float: right;" class="events-menu-container">
+			<div class="events-menu-container">
 				<div class="menu-item-container" data-bind="click: function () { $root.showSelectedEventsOnMenuItemClick( $element, 7, $root.detailsPageJournalMenu.getCurrentSelectedEventsProp(), $root.detailsPageJournalMenu ) }">
 					<div class="border-item inne-border-tab"></div>
 					<div class="menu-item" data-eventkind="7">
@@ -121,9 +119,8 @@
 				</div>
 			</div>
 
-		</div>
 	</section>
-</div>
+</section>
 <div class="dz-row">
 	<div class="title-header">
 		<span>Plan dnia
