--- a/KalendarzKarierySolution/KalendarzKariery/Views/Home/LobbyPage/_LobbyEventsMenuItems.cshtml
+++ b/KalendarzKarierySolution/KalendarzKariery/Views/Home/LobbyPage/_LobbyEventsMenuItems.cshtml
@@ -1,4 +1,4 @@
-﻿	<div id="addPublicEventBtn" class="hover-cursor-pointer" data-bind="click: function ( data, e ) { $root.showAddPublicEventPopupOnClick( $element, data, e ) }">Stwórz publiczne wydarzenie +</div>
+﻿
 	<div class="events-menu-container">
 		<div class="menu-item-container" data-bind="click: function () { $root.showSelectedEventsOnMenuItemClick( $element, 7, $root.lobbyPagePublicEventListMenu.getCurrentSelectedEventsProp(), $root.lobbyPagePublicEventListMenu ) }">
 			<div class="border-item inne-border-tab"></div>
@@ -74,3 +74,5 @@
 			</div>
 		</div>
 	</div>
+
+<div id="addPublicEventBtn" class="hover-cursor-pointer" data-bind="click: function ( data, e ) { $root.showAddPublicEventPopupOnClick( $element, data, e ) }">Stwórz publiczne wydarzenie +</div>
