--- a/KalendarzKarierySolution/KalendarzKariery/Views/Home/Index.cshtml
+++ b/KalendarzKarierySolution/KalendarzKariery/Views/Home/Index.cshtml
@@ -84,8 +84,9 @@
 		PROGRAM.initializeAndStartSpinner();
 		PROGRAM.initialize(indexViewModel, userName);
 
-		var dzieuo = $('#dzieuo').dzieuo();
-
+		var dzieuo = $('#dzieuo').dzieuo({
+			'row_scroll_padding_top': 20
+		});
 	});
 
 </script>
