--- a/KalendarzKarierySolution/KalendarzKariery/Content/Site.css
+++ b/KalendarzKarierySolution/KalendarzKariery/Content/Site.css
@@ -1,36 +1,36 @@
 ﻿html, body, #mainContainer {
-	padding: 0px;
-	margin: 0px;
-	height: 100%;
-	width: 100%;
+  padding: 0px;
+  margin: 0px;
+  height: 100%;
+  width: 100%;
 }
 
 body {
-	font-size: .85em;
-	line-height: 1.6;
-	font-family: "SegoeUI", Helvetica, Sans-Serif, Raleway-Regular;
-	font-weight: 400;
-	-webkit-font-smoothing: antialiased;
+  font-size: .85em;
+  line-height: 1.6;
+  font-family: "SegoeUI", Helvetica, Sans-Serif, Raleway-Regular;
+  font-weight: 400;
+  -webkit-font-smoothing: antialiased;
 }
 
 header, footer, nav, section, div {
-	display: block;
-	margin: 0;
+  display: block;
+  margin: 0;
 }
 
 @font-face {
-	font-family: Raleway;
-	src: url('Fonts/Raleway/Raleway-Thin.ttf');
+  font-family: Raleway;
+  src: url('Fonts/Raleway/Raleway-Thin.ttf');
 }
 
 @font-face {
-	font-family: Raleway-Regular;
-	src: url('Fonts/Raleway/Raleway-Regular.ttf');
+  font-family: Raleway-Regular;
+  src: url('Fonts/Raleway/Raleway-Regular.ttf');
 }
 
 @font-face {
-	font-family: SegoeUI;
-	src: url('Fonts/SegoeUI/segoeui.ttf');
+  font-family: SegoeUI;
+  src: url('Fonts/SegoeUI/segoeui.ttf');
 }
 
 /*@font-face {
@@ -43,238 +43,257 @@ header, footer, nav, section, div {
 	src: url('Fonts/Oxygen/Oxygen-Regular.ttf');
 }*/
 
+/*.dz-row.current{
+  border-right:2px solid #E8E8D4;
+}*/
+
+
 /* Kalendarz Kariery
 -----------------------------------------------------------*/
 
 /*Lobby*/
 #lobbyLogo {
-	display: inline-block;
+  display: inline-block;
 }
 
 #lobby .dz-column-inner-wrapper {
-	padding-right: 260px;
+  padding-right: 260px;
 }
 
 #lobbyHeader {
-	background: #D8CDB8;
-	padding: 40px 0;
-	float: right;
+  background: #D8CDB8;
+  padding: 40px 0;
+  float: right;
 }
 
 .login-bar-container {
-	float: right;
-	margin-top: 70px;
-	padding: 20px;
-	color: gray;
-	font-size: 1.4em;
+  float: right;
+  margin-top: 70px;
+  padding: 20px;
+  color: gray;
+  font-size: 1.4em;
 }
 
 #registerSpanLink {
-	font-size: .8em;
-	margin-left: 20px;
+  font-size: .8em;
+  margin-left: 20px;
 }
 
 #lobbyQuoteAndNavSection {
-	/*background: #9E9A89;*/
-	background: gray;
-	padding: 10px;
-	padding-bottom: 0;
+  background: #9E9A89;
+  /*background: gray;*/
+  padding: 10px;
+  padding-bottom: 0;
+  font-family: Raleway-Regular;
 }
 
 .lobby-quote {
-	color: black;
-	font-size: 2em;
-	text-align: center;
+  color: black;
+  font-size: 2em;
+  text-align: center;
 }
 
 .dz-row {
-	position: relative;
-	top: 20px;
-	margin-bottom: 40px;
+  position: relative;
+  margin-bottom: 20px;
+  top:20px;
 }
 
 #lobbyNavContainer {
-	margin-top: 150px;
-	text-align: center;
-	font-size: 1.2em;
-	padding: 20px;
-	border-top: 1px solid #949494;
+  margin-top: 150px;
+  text-align: center;
+  font-size: 1.2em;
+  padding: 20px;
+  /*border-top: 1px solid #949494;*/
+  border-top: 1px solid #B5B19E;
 }
 
-	#lobbyNavContainer a {
-		margin: 10px;
-		color: white;
-		text-decoration: none;
-	}
+  #lobbyNavContainer a {
+    margin: 10px;
+    color: white;
+    text-decoration: none;
+  }
 
 .selected-nav-link {
-	text-shadow: 0px 1px 1px #B3AC95;
-	border-bottom: 2px solid #F6FFF4;
+  text-shadow: 0px 1px 1px #B3AC95;
+  border-bottom: 2px solid #F6FFF4;
 }
 
 #lobbyTableOfEventsSection {
-	background: rgb(250, 250, 240);
+  /*background: rgb(250, 250, 240);*/
 }
 
 .events-menu-container {
-	text-align: center;
-	padding: 10px;
+  text-align: center;
+  margin-bottom: 20px;
 }
 
 .menu-item-container {
-	display: inline-block;
-	position: relative;
-	margin-bottom: 20px;
-	margin-top: 20px;
-	background: #FDFDF9;
-	border: 2px solid rgb(228, 224, 209);
+  display: inline-block;
+  position: relative;
+  margin-bottom: 20px;
+  background: #FDFDF9;
+  border: 2px solid rgb(228, 224, 209);
 }
 
 .menu-item {
-	height: 0px;
-	color: rgb(133, 123, 100);
-	font-size: 1em;
-	margin-bottom: 20px;
-	width: 100px;
-	text-align: center;
+  height: 0px;
+  color: rgb(133, 123, 100);
+  font-size: 1em;
+  margin-bottom: 20px;
+  width: 100px;
+  text-align: center;
 }
 
 .border-item {
-	border-bottom: 8px solid;
+  border-bottom: 8px solid;
 }
 
 /*border-colors*/
 .inne-border-tab {
-	color: rgb(255, 204, 204);
+  color: rgb(255, 204, 204);
 }
 
 .lekcje-border-tab {
-	color: rgb(255, 232, 189);
+  color: rgb(255, 232, 189);
 }
 
 .wydarzenia-border-tab {
-	color: rgb(255, 255, 196);
+  color: rgb(255, 255, 196);
 }
 
 .spotkania-border-tab {
-	color: rgb(194, 255, 212);
+  color: rgb(194, 255, 212);
 }
 
 .zajecia-border-tab {
-	color: rgb(193, 241, 255);
+  color: rgb(193, 241, 255);
 }
 
 .szkolenia-border-tab {
-	color: rgb(185, 205, 255);
+  color: rgb(185, 205, 255);
 }
 
 .kursy-border-tab {
-	color: rgb(200, 200, 200);
+  color: rgb(200, 200, 200);
 }
 
 /*end border-colors*/
 
 .menu-item-number-upcoming {
-	font-size: 3em;
-	color: rgb(173, 165, 137);
+  font-size: 3em;
+  color: rgb(173, 165, 137);
 }
 
 .display-events-overview-container {
-	background: rgb(232, 232, 212);
-	border: 2px solid white;
+  background: rgb(232, 232, 212);
+  border: 2px solid white;
 }
 
 .display-events-overview-header {
-	text-align: left;
-	padding: 5px;
-	padding-left: 20px;
-	background: #DBDBCA;
-	font-size: 1.4em;
-	position: relative;
+  text-align: left;
+  padding: 5px;
+  padding-left: 20px;
+  background: #DBDBCA;
+  font-size: 1.4em;
+  position: relative;
 }
 
 .display-events-header-menu-title {
-	border-top: 4px solid #A7A292;
-	padding: 10px;
+  border-top: 4px solid #A7A292;
+  padding: 10px;
 }
 
-	.display-events-header-menu-title.selected {
-		/*color: rgb(255, 251, 239);*/
-		color: rgb(121, 121, 106);
-		border-top: 4px solid #9A9A84;
-		/*border-top: 4px solid #D7D0B8;*/
-	}
+  .display-events-header-menu-title.selected {
+    /*color: rgb(255, 251, 239);*/
+    color: rgb(121, 121, 106);
+    border-top: 4px solid #9A9A84;
+    /*border-top: 4px solid #D7D0B8;*/
+  }
 
 .display-events-overview-body {
-	padding-bottom: 40px;
-	padding-top: 20px;
+  padding-bottom: 40px;
+  padding-top: 20px;
 }
 
 .display-events-overview-container .legend-oldorupcoming {
-	color: whitesmoke;
-	padding: 4px 0;
-	font-size: 2em;
-	text-align: center;
-	margin-left: 100px;
-	margin-top: 1px;
-	position: relative;
-	background: rgb(115, 115, 114);
-	border-bottom: 2px solid #E8E8D4;
+  color: whitesmoke;
+  padding: 4px 0;
+  font-size: 2em;
+  text-align: center;
+  margin-left: 100px;
+  margin-top: 1px;
+  position: relative;
+  background: rgb(150, 148, 137);
+  border-bottom: 2px solid #E8E8D4;
 }
 
 .oldorupcoming-event-count {
-	padding-right: 10px;
-	position: absolute;
-	right: 0;
+  padding-right: 10px;
+  position: absolute;
+  right: 0;
 }
 
 .oldorupcoming-expand-text {
-	font-size: 14px;
-	position: relative;
-	right: 100px;
+  font-size: 14px;
+  position: relative;
 }
 
 .display-events-overview-item {
-	border-left: 2px solid #D8D8C5;
-	border-right: 2px solid #D8D8C5;
-	border-bottom: 2px solid #F3F3E4;
-	background: #FBFBF5;
-	overflow: hidden;
+  border-left: 2px solid #D8D8C5;
+  border-right: 2px solid #D8D8C5;
+  border-bottom: 2px solid #CCCCBF;
+  border-top: 2px solid #FFFFF2;
+  background: #F5F5E6;
+  overflow: hidden;
+  margin: 4px 0;
 }
 
 .oldorupcoming-text-container {
-	position: absolute;
-	left: 0;
+  position: absolute;
+  left: 0;
 }
 
 .oldorupcoming-sign {
-	padding: 20px;
+  padding: 20px;
 }
 
 .event-block-container {
-	background: #C3C3AE;
-	margin: 2px;
-	width: 30%;
-	height: auto;
-	padding: 10px;
+  background: #D8D8C3;
+  margin: 1px;
+  width: 31%;
+  height: auto;
+  padding: 10px;
+  min-height: 200px;
 }
 
 #lobbyEventsMasonryContainer {
-	background: gray;
-	height: 100%;
-	width: 100%;
+  height: 100%;
+  width: 98%;
+  float: right;
 }
 
 
 /*Details page*/
 
 #details .dz-column-inner-wrapper {
-	width: 80%;
-	margin: 0 auto;
+  width: 80%;
+  margin: 0 auto;
 }
 
+/*#clockCanvas {
+	position: absolute;
+	top: 70px;
+}
 
-
+#digitalClock {
+	position: absolute;
+	top: 160px;
+	width: 200px;
+	text-align: center;
+	font-size: 40px;
+	color: rgb(207, 199, 173);
+}*/
 
 
 
@@ -285,11 +304,11 @@ header, footer, nav, section, div {
 
 
 #loginPageContainer {
-	display: none;
+  display: none;
 }
 
 #registerPageContainer {
-	display: none;
+  display: none;
 }
 
 
@@ -298,93 +317,94 @@ header, footer, nav, section, div {
 
 
 .inline-block {
-	display: inline-block;
-	vertical-align: top;
+  display: inline-block;
+  vertical-align: top;
 }
 
 .width-49per {
-	width: 49%;
+  width: 49%;
 }
 
 .event-block-description {
 }
 
 .display-events-overview-item-list {
-	padding-left: 100px;
-	padding-right: 6px;
+  padding-left: 100px;
+  padding-right: 6px;
 }
 
 .section-title {
-	background: #E8E8D4;
-	font-size: 2em;
-	text-align: center;
-	color: #5D5D59;
+  background: #E8E8D4;
+  font-size: 2em;
+  text-align: center;
+  color: #5D5D59;
+  margin-bottom: 40px;
 }
 
 .hover-cursor-pointer:hover {
-	cursor: pointer;
+  cursor: pointer;
 }
 
 .close-btn-x {
-	color: rgb(140, 133, 133);
-	font-size: 1.4em;
-	position: absolute;
-	top: -3px;
-	right: 12px;
+  color: rgb(140, 133, 133);
+  font-size: 1.4em;
+  position: absolute;
+  top: -3px;
+  right: 12px;
 }
 
 .overview-item-inner-wrapper {
-	font-size: 1.4em;
-	color: #313131;
+  font-size: 1.4em;
+  color: #5D5B55;
 }
 
 .list-item-title {
-	font-size: 1.4em;
+  font-size: 1.4em;
 }
 
 .list-item-star {
-	display: inline-block;
-	vertical-align: bottom;
-	width: 40px;
+  display: inline-block;
+  vertical-align: bottom;
+  width: 40px;
 }
 
 .list-item-other {
-	font-size: 1.2em;
-	margin-right: 20px;
+  font-size: 1.2em;
+  margin-right: 20px;
 }
 
 .list-item-date {
-	margin-bottom: 10px;
-	padding-left: 40px;
+  margin-bottom: 10px;
+  padding-left: 40px;
 }
 
 .event-kind-tag {
-	width: 180px;
-	background: #90907F;
-	text-align: center;
+  width: 180px;
+  background: #797974;
+  text-align: center;
 }
 
 .event-block-info-details {
-	font-size: 1.4em;
+  font-size: 1.4em;
 }
 
 .event-block-menu {
-	float: right;
+  float: right;
 }
 
 .dziennik-menu-container {
-	width: 40%;
-	height: 200px;
-	background: #EAEADD;
-	float: right;
-	text-align: center;
-	padding: 20px 0;
-	font-size: 1.4em;
-	color: #616158;
+  width: 40%;
+  height: 200px;
+  background: #EAEADD;
+  float: right;
+  text-align: center;
+  padding: 20px 0;
+  font-size: 1.4em;
+  color: #616158;
 }
 
 .small-kk-logo {
-	position: absolute;
-	left: 20px;
-	top: 20px;
+  position: absolute;
+  left: 20px;
+  top: 20px;
 }
