--- a/KalendarzKarierySolution/KalendarzKariery/Content/Dzieuo.css
+++ b/KalendarzKarierySolution/KalendarzKariery/Content/Dzieuo.css
@@ -1,28 +1,18 @@
-﻿html, body {
-  padding: 0;
-  margin: 0;
-  height: 100%;
-}
-
+﻿
 #dzieuo {
   position: relative;
   overflow-x: hidden;
   overflow-y: hidden;
   height: 100%;
-  width:100%;
 }
 
 .dz-column {
   width: 100%;
   height: 100%;
+  overflow-y: scroll;
   position: absolute;
   top: 0;
   left: 0;
-  color: red;
-}
-
-.dz-row {
-  height: 400px;
 }
 
 #dzViewPort {
@@ -47,57 +37,46 @@
 }
 
   #dzHorizontalPaging .dz-horizontal-paging-item {
-    width: 20px;
-    height: 20px;
-    margin: 4px;
+    width: 10px;
+    height: 10px;
+    margin: 3px;
     border: 2px solid #DEDEDE;
     display: inline-block;
-    border-radius: 20px;
+    border-radius: 10px;
   }
 
     #dzHorizontalPaging .dz-horizontal-paging-item.current {
-      width: 20px;
-      height: 20px;
-      margin: 4px;
-      border: 2px solid #DEDEDE;
-      display: inline-block;
-      background: #E8E8D4;
+      border: 2px solid #ADA8A8;
+      background: #A2D5EE;
     }
 
 #dzVerticalPaging {
   position: fixed;
   right: 130px;
-  top: 200px;
 }
 
   #dzVerticalPaging .dz-vertical-paging-item {
-    width: 20px;
-    height: 20px;
+    width: 10px;
+    height: 10px;
     margin: 4px;
     border: 2px solid #DEDEDE;
     display: block;
-    border-radius: 20px;
+    border-radius: 10px;
   }
 
     #dzVerticalPaging .dz-vertical-paging-item.current {
-      width: 20px;
-      height: 20px;
-      margin: 4px;
-      display: block;
-      background: #E8E8D4;
-      border: 2px solid #DEDEDE;
+      background: #A2D5EE;
+      border: 2px solid #ADA8A8;
     }
 
 #dzHorizontalNav #dzNextArrow {
-  position: fixed;
+  position: absolute;
   right: 50px;
-  height: 92px;
 }
 
 #dzHorizontalNav #dzPrevArrow {
-  position: fixed;
+  position: absolute;
   left: 40px;
-  height: 92px;
 }
 
 #dzVerticalNav {
@@ -105,6 +84,7 @@
   top: 300px;
   right: 240px;
   height: 100px;
+  background: white;
   text-align: center;
 }
 
@@ -123,7 +103,3 @@
 .dz-nav-arrows {
   display: block;
 }
-
-
-
-/*Demo css*/
