--- a/KalendarzKarierySolution/KalendarzKariery/Views/Shared/_Layout.cshtml
+++ b/KalendarzKarierySolution/KalendarzKariery/Views/Shared/_Layout.cshtml
@@ -10,7 +10,7 @@
 	<link rel="icon" href="@Url.Content( "~/Images/Ico/favicon.ico" )"/>
 	@Styles.Render( "~/Content/css" )
 	<link href="~/Scripts/CalendarWidget/calendarWidget.css" rel="stylesheet" />
-	<link href="~/Content/Dzieou.css" rel="stylesheet" />
+	<link href="~/Content/Dzieuo.css" rel="stylesheet" />
 </head>
 <body>
 	<div id="mainContainer">
