--- a/KalendarzKarierySolution/KalendarzKariery/Views/Home/LobbyPage/_LobbyLoginBar.cshtml
+++ b/KalendarzKarierySolution/KalendarzKariery/Views/Home/LobbyPage/_LobbyLoginBar.cshtml
@@ -1,22 +1,21 @@
 ﻿@if (Request.IsAuthenticated)
-  {
-		<div class="login-bar-container">
-	<span class="lobby-user-nickname">@User.Identity.Name</span>
-	@using (Html.BeginForm( "LogOff", "Account", FormMethod.Post, new { id = "logoutForm" } ))
-	 {
-		@Html.AntiForgeryToken()
-		<a style="color: rgb(255, 109, 109);border-radius:3px; border: 2px solid rgb(255, 156, 156);border-left:none; padding:10px; padding-left: 0; font-size: 1.4em;" href="javascript:document.getElementById('logoutForm').submit()">wyloguj</a>
-	 }
-</div>
-	 
-  }
-  else
-  {
-	<div class="login-bar-container">
-		<span id="loginSpanLink" data-bind="click: showLoginFormOnClick" class="hover-cursor-pointer">Zaloguj sie</span>
-		<span id="registerSpanLink" data-bind="click: showRegisterFormOnClick" class="hover-cursor-pointer">Stwórz konto</span>
-	</div>
+{
+    <div id="loginBarContainer">
+      <span class="lobby-user-nickname">@User.Identity.Name</span>
+      @using (Html.BeginForm("LogOff", "Account", FormMethod.Post, new { id = "logoutForm" }))
+      {
+          @Html.AntiForgeryToken()
+          <a style="color: rgb(255, 109, 109);border-radius:3px; border: 2px solid rgb(255, 156, 156);border-left:none; padding:10px; padding-left: 0;" href="javascript:document.getElementById('logoutForm').submit()">wyloguj</a>   }
+    </div>
 
-	@Html.Partial( "_Login", new KalendarzKarieryData.Models.AccountModels.LoginModel() )
-	@Html.Partial( "_Register", new KalendarzKarieryData.Models.ViewModels.RegisterViewModel() )		 
-  }
+}
+else
+{
+    <div id="loginBarContainer">
+      <span id="loginSpanLink" data-bind="click: showLoginFormOnClick" class="hover-cursor-pointer">Zaloguj sie</span>
+      <span id="registerSpanLink" data-bind="click: showRegisterFormOnClick" class="hover-cursor-pointer">Stwórz konto</span>
+    </div>
+
+    @Html.Partial("_Login", new KalendarzKarieryData.Models.AccountModels.LoginModel())
+    @Html.Partial("_Register", new KalendarzKarieryData.Models.ViewModels.RegisterViewModel())
+}
