--- a/KalendarzKarierySolution/KalendarzKariery/Content/Site.css
+++ b/KalendarzKarierySolution/KalendarzKariery/Content/Site.css
@@ -11,11 +11,17 @@ body {
   font-family: "SegoeUI", Helvetica, Sans-Serif, Raleway-Regular;
   font-weight: 400;
   -webkit-font-smoothing: antialiased;
+  background: rgb(250, 250, 240);
 }
 
 header, footer, nav, section, div {
   display: block;
   margin: 0;
+}
+
+pre {
+  margin: 0;
+  padding: 0;
 }
 
 @font-face {
@@ -66,12 +72,11 @@ header, footer, nav, section, div {
   float: right;
 }
 
-.login-bar-container {
+#loginBarContainer {
   float: right;
   margin-top: 70px;
-  padding: 20px;
   color: gray;
-  font-size: 1.4em;
+  font-size: 1.6em;
 }
 
 #registerSpanLink {
@@ -217,14 +222,13 @@ header, footer, nav, section, div {
 }
 
 .display-events-overview-container .legend-oldorupcoming {
-  color: whitesmoke;
+  color: #4E4E48;
   padding: 4px 0;
   font-size: 2em;
   text-align: center;
   margin-left: 100px;
   margin-top: 1px;
   position: relative;
-  background: rgb(150, 148, 137);
   border-bottom: 2px solid #E8E8D4;
 }
 
@@ -259,11 +263,20 @@ header, footer, nav, section, div {
 }
 
 .event-block-container {
-  background: #D8D8C3;
+  display: inline-block;
+  width: 32%;
+  vertical-align: top;
   margin: 1px;
-  width: 31%;
-  height: auto;
-  padding: 10px;
+}
+
+.event-block {
+  color: rgb(126, 116, 101);
+  line-height: 1;
+  /*background: #D7D0B8;*/
+  background: #E4DECA;
+  /*box-shadow: rgb(169, 162, 139) 2px 2px 10px -1px inset;*/
+  border: 2px solid rgb(189, 180, 153);
+  border-top: none;
   min-height: 200px;
 }
 
@@ -273,6 +286,24 @@ header, footer, nav, section, div {
   float: right;
 }
 
+/*Calendar page*/
+.event-rectangle {
+  overflow: hidden;
+  position: absolute;
+  z-index: 2;
+  border-top: 4px solid;
+  height: 23px;
+  color: rgb(102, 102, 102);
+  font-size: .9em;
+  line-height: 1;
+  background: none;
+  font-family: Raleway-Regular;
+  opacity: 1;
+}
+
+.today-cell .event-rectangle {
+  font-size: .9em;
+}
 
 /*Details page*/
 
@@ -296,10 +327,199 @@ header, footer, nav, section, div {
   display: inline-block;
 }
 
-.details-day-table-head div {
+#detailsDayTable {
+  position: relative;
+  padding: 0px 2%;
+  padding-bottom: 40px;
+  width: 88%;
+  margin: 0 auto;
+  background: rgba(232, 232, 212, 0.8);
+}
+
+  #detailsDayTable .details-day-table-head {
+    overflow: hidden;
+    text-align: left;
+    color: rgb(99, 96, 90);
+    padding: 10px;
+    padding-left: 6px;
+    font-size: 18px;
+  }
+
+    #detailsDayTable .details-day-table-head div {
+      float: left;
+      width: 7.14%;
+    }
+
+  #detailsDayTable .details-day-table-body {
+    background: rgb(162, 156, 143);
+    padding-top: 4px;
+    padding-bottom: 4px;
+    padding-left: 1px;
+  }
+
+  #detailsDayTable .details-day-table-cell {
+    float: left;
+    width: 7.14%;
+    position: relative;
+    height: 100%;
+  }
+
+  #detailsDayTable .small-minutes {
+    font-size: 10px;
+    vertical-align: top;
+  }
+
+.hour-line {
+  position: absolute;
+  background: rgb(177, 173, 159);
+  height: 100%;
+  width: 1px;
+}
+
+.hour-line-21 {
+  position: absolute;
+  background: rgb(177, 173, 159);
+  height: 100%;
+  width: 1px;
+  right: 1px;
+}
+
+.day-display-date-container {
+  font-size: 2em;
+  color: black;
+  padding-bottom: 10px;
+}
+
+  .day-display-date-container .display-date-small {
+    font-size: .5em;
+    color: #B7AE9A;
+  }
+
+.event-rectangle-details {
+  color: rgb(232,232,232);
+  overflow: hidden;
+  position: absolute;
+  z-index: 2;
+  border-top: 4px solid;
+  height: 40px;
+  line-height: 1;
+}
+
+#detailsEventsAndNotesContainer {
+  overflow: hidden;
+  padding: 0 2%;
+  padding-bottom: 40px;
+  width: 88%;
+  margin: 0 auto;
+  background: rgba(232, 232, 212, 0.8);
+}
+
+#detailsEventBlockList {
+  width: 49%;
   display: inline-block;
+}
+
+.details-event-block-container {
+  margin-bottom: 4px;
+}
+
+.details-event-block {
+  color: rgb(250, 250, 250);
+  line-height: 1;
+  /*background: rgb(228, 223, 202);*/
+  background: rgb(210, 210, 188);
+}
+
+  .details-event-block .event-kind-tag {
+    padding: 5px;
+    background: #A29C8F;
+    width: 100px;
+    line-height: 1.5;
+    font-size:1em;
+    float: right;
+    text-align: center;
+  }
+
+.details-event-block-body {
+  color: rgb(126, 116, 101);
+  border-top: 2px solid #FDFDFD;
   padding: 10px;
 }
+
+#notesContainer {
+  float: right;
+  vertical-align: top;
+  width: 49%;
+}
+
+.details-event-block-footer {
+  padding: 10px;
+  overflow: hidden;
+  color:rgb(152, 152, 137);
+}
+
+.notes-shadow-box {
+  position: relative;
+  background: rgb(245, 242, 230);
+  border: 2px solid #FAFAF0;
+  color: rgba(0,0,0, .8);
+}
+
+  .notes-shadow-box::before, .notes-shadow-box::after {
+    z-index: -1;
+    position: absolute;
+    content: "";
+    bottom: 15px;
+    left: 10px;
+    width: 50%;
+    top: 80%;
+    max-width: 300px;
+    background: rgb(184, 168, 137);
+    box-shadow: 0 15px 10px rgb(184, 168, 137);
+    transform: rotate(-3deg);
+  }
+
+  .notes-shadow-box::after {
+    transform: rotate(3deg);
+    right: 10px;
+    left: auto;
+  }
+
+#notesTxtArea {
+  width: 100%;
+  height: 80px;
+  box-sizing: border-box;
+  font-size: 1.4em;
+  /*background: rgb(237, 233, 217);*/
+  background: rgb(253, 253, 249);
+  border: 1px solid #A9A9A9;
+  padding: 10px;
+}
+
+#btnAddNewNote {
+  float: right;
+  margin-bottom: 10px;
+}
+
+#notesList {
+  list-style-position: outside;
+  font-size: 1.4em;
+  margin: 0 auto;
+}
+
+
+#notesListContainer {
+  padding: 0 2px;
+}
+
+.note-content {
+  border-bottom: 1px solid rgb(253, 252, 250);
+}
+
+.edit-mode-note-container {
+  clear: both;
+}
+
 
 /*#clockCanvas {
 	position: absolute;
@@ -331,9 +551,19 @@ header, footer, nav, section, div {
   display: none;
 }
 
+#logoutForm {
+  display: inline-block;
+}
 
-
-
+.btn-add {
+  font-size: 1.8em;
+  color: rgb(137, 197, 155);
+  padding: 0 14px;
+  border: 2px solid rgb(137, 197, 155);
+  border-radius: 4px;
+  margin: 10px;
+  background: #FDFCFA;
+}
 
 
 .inline-block {
@@ -358,7 +588,7 @@ header, footer, nav, section, div {
   font-size: 2em;
   text-align: center;
   color: #5D5D59;
-  margin-bottom: 40px;
+  margin-bottom: 10px;
 }
 
 .hover-cursor-pointer:hover {
@@ -374,7 +604,7 @@ header, footer, nav, section, div {
 }
 
 .overview-item-inner-wrapper {
-  font-size: 1.4em;
+  font-size: 1em;
   color: #5D5B55;
 }
 
@@ -394,13 +624,13 @@ header, footer, nav, section, div {
 }
 
 .list-item-date {
-  margin-bottom: 10px;
-  padding-left: 40px;
+  padding-left: 45px;
 }
 
 .event-kind-tag {
-  width: 180px;
-  background: #797974;
+  padding: 5px;
+  background: #A29C8F;
+  width: 100px;
   text-align: center;
 }
 
