--- a/KalendarzKarierySolution/KalendarzKariery/Views/Home/DetailsPage/_DetailsEventBlock.cshtml
+++ b/KalendarzKarierySolution/KalendarzKariery/Views/Home/DetailsPage/_DetailsEventBlock.cshtml
@@ -1,6 +1,6 @@
 ﻿<div class="details-event-block-container" data-bind="attr: { 'data-eventid': id }">
 	<div class="details-event-block">
-		<div class="event-kind-tag" style="float: right; text-align: center;" data-bind="style: { color: kind.headerColor }">
+		<div class="event-kind-tag" data-bind="style: { color: kind.headerColor }">
 			<span data-bind="text: kind.name"></span>
 		</div>
 		<div class="details-event-block-body hover-cursor-pointer" data-bind="click: function () { $root.showEventDetailsOnEventBlockClick( $element ) }">
@@ -50,7 +50,7 @@
 				<div data-bind="if: $root.userName.toUpperCase() == addedBy.toUpperCase()">
 					<div style="text-align: right; font-size: 18px;">
 						<div style="display: inline-block;" class="link details-edit-event-link" data-bind="click: function () { $root.editEventDetailsPageOnEditLinkClick( id, startDate.year, startDate.month, startDate.day ) }"><span>edytuj</span></div>
-						<div style="display: inline-block; color: rgb(175, 167, 167);" class="link details-delete-event-link" data-bind="click: function () { $root.prepareDeleteEventDetailsPageOnDeleteLinkClick( id, startDate.year, startDate.month, startDate.day, privacyLevel.name ) }"><span>usuń</span></div>
+						<div style="display: inline-block;" class="link details-delete-event-link" data-bind="click: function () { $root.prepareDeleteEventDetailsPageOnDeleteLinkClick( id, startDate.year, startDate.month, startDate.day, privacyLevel.name ) }"><span>usuń</span></div>
 					</div>
 				</div>
 			</div>
