--- a/KalendarzKarierySolution/KalendarzKariery/Views/Home/DetailsPage/_DetailsNotesSummary.cshtml
+++ b/KalendarzKarierySolution/KalendarzKariery/Views/Home/DetailsPage/_DetailsNotesSummary.cshtml
@@ -1,30 +1,25 @@
-﻿<div id="notesContainer">
-	<div id="notes" class="notes-shadow-box" style="min-height: 200px;">
-		<div>
-			<textarea maxlength="1000" data-bind="value: $root.observableNote.data" placeholder="Wpisz treść notatki" style="width: 100%; height: 86px; box-sizing: border-box; font-size: 22px; background: rgb(237, 233, 217);"></textarea>
-		</div>
-		<div style="float: right;" id="btnAddNewNote" data-bind="click: $root.AddNoteOnClick" class="hover-cursor-pointer">
-			<span class="save-text">dodaj</span>
-		</div>
-		<div style="margin-top: 40px;">
+﻿<div class="notes-shadow-box">
+			<textarea id="notesTxtArea" maxlength="1000" data-bind="value: $root.observableNote.data" placeholder="Wpisz treść notatki"></textarea>
+  <div style="overflow:hidden;">
+    <div id="btnAddNewNote" data-bind="click: $root.AddNoteOnClick" class="btn-add hover-cursor-pointer">dodaj</div>
+  </div>
+		<div id="notesListContainer">
 			<ul id="notesList" data-bind="foreach: $root.detailsPageDayNotes">
-				<li class="li-note-container" data-bind="attr: { 'data-noteid': id, 'type': isLineThrough() ? 'disc' : 'circle' }">
+				<li data-bind="attr: { 'data-noteid': id, 'type': isLineThrough() ? 'disc' : 'circle' }">
 					<div class="note-content">
 						<pre data-bind="text: data, css: { 'line-through-text': isLineThrough() }" style="white-space: pre-wrap;"></pre>
-						<div style="float: right;margin-top:16px;">
+						<div style="overflow:hidden;">
 						<div style="font-size: 16px; color: rgb(201, 189, 144);text-align:right;">
-						<span>dodano: </span><span data-bind="text: dateAdded.displayFullTime()"></span><span>  </span><span data-bind="	text: dateAdded.displayFullDate()"></span>
+						<span>dodano: </span><span data-bind="text: dateAdded.displayFullTime()"></span><span>  </span><span data-bind="text: dateAdded.displayFullDate()"></span>
 						</div>
-							<div style="font-size: 18px; text-align: right; background: rgb(237, 237, 237);padding:0 10px;">
+							<span style="font-size: 18px;float:right; background: rgb(250, 250, 240);padding:0 10px;">
 								<span style="color: gray; padding-right: 10px;" class="link" data-bind="click: function () { $root.setLineThroughNoteDetailsPageOnLineThroughLinkClick( id, displayDate.year, displayDate.month, displayDate.day, !isLineThrough() ) }, text: isLineThrough() ? 'odkreśl' : 'skreśl' ">skreśl</span>
 								<span class="link" style="color: gray;" data-bind="click: function () { $root.editNoteDetailsPageOnEditLinkClick( id, displayDate.year, displayDate.month, displayDate.day ) }">edytuj</span>
 								<span data-bind="click: function () { $root.prepareDeleteNoteDetailsPageOnDeleteLinkClick( id, displayDate.year, displayDate.month, displayDate.day ) }" class="link" style="color: rgb(175, 167, 167);">usuń</span>
-							</div>
+							</span>
 						</div>
-
 					</div>
 				</li>
 			</ul>
 		</div>
 	</div>
-</div>
