--- a/KalendarzKarierySolution/KalendarzKariery/Views/Home/Index.cshtml
+++ b/KalendarzKarierySolution/KalendarzKariery/Views/Home/Index.cshtml
@@ -3,6 +3,7 @@
 <div id="dzieuo">
 	<section id="lobby" class="dz-column">
 		@Html.Partial( "_Lobby" )
+    @Html.Partial("_AddNewEvent", new KalendarzKarieryData.Models.ViewModels.AddEventViewModel())
 	</section>
 
 	<section id="calendar" class="dz-column">
