--- a/KalendarzKarierySolution/KalendarzKariery/Views/Shared/_Layout.cshtml
+++ b/KalendarzKarierySolution/KalendarzKariery/Views/Shared/_Layout.cshtml
@@ -17,6 +17,8 @@
 		<div id="spinnerContainer">
 			<span id="spinnerText"></span>
 		</div>
+    <div class="page-overlay" style="display:none;"></div>
+    @Html.Partial("_ConfirmationPopupBox")
 
 		@RenderBody()
 
