--- a/KalendarzKarierySolution/KalendarzKariery/Views/Home/SharedPartials/_ConfirmationPopupBox.cshtml
+++ b/KalendarzKarierySolution/KalendarzKariery/Views/Home/SharedPartials/_ConfirmationPopupBox.cshtml
@@ -1,13 +1,13 @@
-﻿<div class="confirmation-popupbox-container slick-contact-form" style="display: none;">
+﻿<div class="confirmation-popupbox" style="display: none;">
 	<div>
 		<span class="confirmation-popupbox-maintext"></span>
 	</div>
 	<div style="margin-top: 20px;">
 		<div class="confirmation-popupbox-yesbtn hover-cursor-pointer" style="display: inline-block;">
-			<span class="save-text">Tak</span>
+			<span class="green-color">Tak</span>
 		</div>
 		<div class="confirmation-popupbox-nobtn hover-cursor-pointer" data-bind="click: function () { $root.hideConfirmationPopupBox( $element ) }" style="display: inline-block;">
-			<span class="close-text">Nie</span>
+			<span class="red-color">Nie</span>
 		</div>
 	</div>
 </div>
