--- a/KalendarzKarierySolution/KalendarzKariery/Views/Shared/_Layout.cshtml
+++ b/KalendarzKarierySolution/KalendarzKariery/Views/Shared/_Layout.cshtml
@@ -19,6 +19,7 @@
 		</div>
     <div class="page-overlay" style="display:none;"></div>
     @Html.Partial("_ConfirmationPopupBox")
+    @Html.Partial("_AddNewEvent", new KalendarzKarieryData.Models.ViewModels.AddEventViewModel())
 
 		@RenderBody()
 
